--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,5 @@ defaults:
     values:
       layout: "post"
       author: "Flafla2"
-      comments: "true"
+      comments: true
+      visible: true
