Added post about Wiimote API

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ defaults:
   -
     scope:
       path: ""
-      type: "post"
+      type: "posts"
     values:
       layout: "post"
       author: "Flafla2"
