--- a/_data/recommended_posts.yml
+++ b/_data/recommended_posts.yml
@@ -1,9 +1,9 @@
 - title: "Raymarching Distance Fields&#58; Concepts and Implementation in Unity"
-  img: "img/2016-10-01-raymarching/snail.png"
-  uri: "2016/10/01/raymarching.html"
+  img: "/img/2016-10-01-raymarching/snail.png"
+  uri: "/2016/10/01/raymarching.html"
 - title: "Project Description: Ellis Island Virtual Reality Experience"
-  img: "img/rec-thumb/ellis.png"
-  uri: "2015/10/16/wiimoteapi.html"
+  img: "/img/rec-thumb/ellis.png"
+  uri: "/2016/06/23/ellis.html"
 - title: "Understanding Perlin Noise"
-  img: "img/rec-thumb/perlin.png"
-  uri: "2014/08/09/perlinnoise.html"
+  img: "/img/rec-thumb/perlin.png"
+  uri: "/2014/08/09/perlinnoise.html"
