--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
 paginate: 5
 paginate_path: "page:num"
-gems: [jekyll-paginate]
+gems:
+  - jekyll-paginate
+  - jekyll-feed
+title: adrian's soapbox
 url: https://flafla2.github.io
 defaults:
   -
